--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,7 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-items: center;
   margin: 10px 0;
 }
 
@@ -68,4 +69,41 @@ h1 {
   max-height: calc(var(--content-max-width) - 30px);
   margin: 0 auto;
   border: var(--scketchpad-border) solid var(--matrix-green);
+  background-color: black;
+}
+
+#grid-width-slider {
+  -webkit-appearance: none;
+  width: 75%;
+  height: 7px;
+  flex: 1 1 auto;
+  margin: 5px;
+  outline: none;
+  background-color: var(--matrix-green);
+  opacity: 0.7;
+}
+
+#grid-width-slider:focus {
+  outline: none;
+}
+
+#grid-width-slider:hover {
+  opacity: 1;
+}
+
+/* Use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 25px;
+  background: white;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 10px;
+  height: 25px;
+  background: white;
+  cursor: pointer;
 }
