--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,7 @@ h1 {
 .color-options-btn {
   width: 100%;
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   background-color: black;
   border: none;
@@ -74,6 +74,16 @@ h1 {
 .color-options-btn:hover,
 .color-options-btn:focus {
   outline: none;
+}
+
+#color-picker {
+  outline: none;
+  border: none;
+  height: 19px;
+  width: 19px;
+  padding: 0;
+  margin: 0;
+  background-color: black;
 }
 
 #sketchpad {
@@ -94,7 +104,7 @@ h1 {
   margin: 5px;
   outline: none;
   background-color: var(--matrix-green);
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 #grid-width-slider:focus {
